--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -162,55 +162,55 @@
             android:src="@drawable/arrow_right" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/layoutSport"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:paddingTop="@dimen/layoutGorilla_top_margin"
-        android:layout_marginTop="20dp"
-        android:paddingBottom="@dimen/layoutGorilla_top_margin"
-        android:background="@drawable/menu_item_background_yellow" >
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/layoutSport"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:paddingTop="@dimen/layoutGorilla_top_margin"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:paddingBottom="@dimen/layoutGorilla_top_margin"-->
+<!--        android:background="@drawable/menu_item_background_yellow" >-->
 
-        <ImageView
-            android:id="@+id/imgSport1"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:scaleType="fitXY"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/img_gym" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imgSport1"-->
+<!--            android:layout_width="100dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:scaleType="fitXY"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:src="@drawable/img_gym" />-->
 
-        <LinearLayout
-            android:id="@+id/layoutSport"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/imgSport1"
-            android:layout_toLeftOf="@+id/imgSport"
-            android:layout_marginLeft="@dimen/text_margin_left"
-            android:layout_centerVertical="true"
-            android:orientation="vertical"
-            android:gravity="center_vertical" >
+<!--        <LinearLayout-->
+<!--            android:id="@+id/layoutSport"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_toRightOf="@+id/imgSport1"-->
+<!--            android:layout_toLeftOf="@+id/imgSport"-->
+<!--            android:layout_marginLeft="@dimen/text_margin_left"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:orientation="vertical"-->
+<!--            android:gravity="center_vertical" >-->
 
-            <TextView
-                android:id="@+id/txtNameSport"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/EXERCISE_EQUIPMENT"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/gorilla_menu" />
+<!--            <TextView-->
+<!--                android:id="@+id/txtNameSport"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/EXERCISE_EQUIPMENT"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                android:textSize="@dimen/gorilla_menu" />-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
-        <ImageView
-            android:id="@+id/imgSport"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/arrow_right_margin"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/arrow_right" />
-    </RelativeLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/imgSport"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginRight="@dimen/arrow_right_margin"-->
+<!--            android:contentDescription="@string/app_name"-->
+<!--            android:src="@drawable/arrow_right" />-->
+<!--    </RelativeLayout>-->
 
 </LinearLayout>
